@@ -18,6 +18,7 @@
 
 backup_defines
 backup_cmd_options $@
+backup_dirdate
 
 if [[ ! -z $keyfile && ! -f $keyfile ]]; then
         echo "** Can not open key file"
